Ok. feat: Add Google OAuth, tiered usage quotas, multi-mode dashboards, and production resiliency hardening
Implement authentication layer with Google OAuth 2.0 and JWT sessions. Add usage tier enforcement (3 free uses per IP, 30 for authenticated beta users) with KV and D1 tracking. Create unified server-rendered dashboards for client usage/recovery progress and admin global telemetry. Upgrade D1 schema with users and usage_logs tables. Add provider resilience controls (retry with jitter, KV-backed

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,24 @@
   <div id="toast-container" class="toast-container"></div>
 
   <main class="container">
+    <!-- Auth Top Bar -->
+    <div id="auth-bar" class="auth-bar">
+      <div class="auth-bar-left">
+        <span id="quota-badge" class="quota-badge hidden">
+          <span id="quota-text">—</span>
+        </span>
+      </div>
+      <div class="auth-bar-right">
+        <a id="auth-login" href="/api/auth/login" class="btn btn-sm btn-auth">
+          <span class="auth-icon">&#x1F512;</span> Sign in with Google
+        </a>
+        <div id="auth-user" class="auth-user hidden">
+          <span id="auth-email" class="auth-email"></span>
+          <a href="/api/auth/logout" class="btn btn-sm btn-auth btn-auth--logout">Sign out</a>
+        </div>
+      </div>
+    </div>
+
     <!-- Mode Switcher -->
     <div class="mode-switcher">
       <button id="mode-ai" class="mode-btn mode-btn--active" data-mode="ai">
