chore: Add environment variable documentation, favicon, powered-by footer, and improve input validation
Add `.dev.vars.example` template with all required runtime variables and secrets. Document environment setup, secret provisioning, and rotation procedures in `docs/environment-variables.md`. Implement admin email allowlist via `ADMIN_EMAILS` environment variable with comma-separated parsing. Add favicon.svg and powered-by attribution footer listing data providers. Fix wallet/contract address detection

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <meta property="og:title" content="ScamShield MY - Scam Response Kit">
   <meta property="og:description" content="Most apps detect scams. We handle what happens after.">
   <meta property="og:type" content="website">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -518,6 +519,18 @@
 
         <!-- Footer -->
         <footer class="footer">
+          <div class="powered-by">
+            <span class="powered-by-label">Powered by</span>
+            <div class="powered-by-logos">
+              <a href="https://www.coingecko.com" target="_blank" rel="noopener noreferrer" class="powered-by-item">CoinGecko</a>
+              <a href="https://honeypot.is" target="_blank" rel="noopener noreferrer" class="powered-by-item">Honeypot.is</a>
+              <a href="https://gopluslabs.io" target="_blank" rel="noopener noreferrer" class="powered-by-item">GoPlus</a>
+              <a href="https://www.chainabuse.com" target="_blank" rel="noopener noreferrer" class="powered-by-item">Chainabuse</a>
+              <a href="https://cryptoscamdb.org" target="_blank" rel="noopener noreferrer" class="powered-by-item">CryptoScamDB</a>
+              <span class="powered-by-item">Gemini AI</span>
+              <a href="https://workers.cloudflare.com" target="_blank" rel="noopener noreferrer" class="powered-by-item">Cloudflare Workers</a>
+            </div>
+          </div>
           <p class="legal-line" data-i18n="footer.legal">ScamShield MY does not promise fund recovery. We provide fast
             containment and reporting pathways.</p>
           <p class="footer-sub" data-i18n="footer.sub">Built for Malaysian scam victims. Open-source community tool.</p>
