--- a/public/dashboard-admin.html
+++ b/public/dashboard-admin.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Admin Dashboard — ScamShield MY</title>
     <meta name="description" content="ScamShield MY admin panel. Monitor global usage, user activity, and scam trends.">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
