--- a/public/dashboard-client.html
+++ b/public/dashboard-client.html
@@ -7,6 +7,7 @@
     <title>My Dashboard — ScamShield MY</title>
     <meta name="description"
         content="Your personal ScamShield MY dashboard. Track usage, view history, and manage your account.">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
