--- a/public/index.html
+++ b/public/index.html
@@ -129,16 +129,16 @@
             </div>
             <div class="ai-quick-actions" id="ai-quick-actions">
               <button class="btn btn-sm btn-ghost ai-quick-btn"
-                data-prompt="I got scammed — what should I do right now?" data-i18n="ai.quick.scammed">I got scammed —
+                data-prompt="I got scammed — what now?" data-i18n="ai.quick.scammed">I got scammed —
                 what now?</button>
               <button class="btn btn-sm btn-ghost ai-quick-btn"
-                data-prompt="I need to check a suspicious wallet address" data-i18n="ai.quick.check_wallet">Check a
+                data-prompt="Check a wallet address" data-i18n="ai.quick.check_wallet">Check a
                 wallet address</button>
               <button class="btn btn-sm btn-ghost ai-quick-btn"
-                data-prompt="Help me generate a police report for a scam" data-i18n="ai.quick.report">Generate a
+                data-prompt="Generate a report" data-i18n="ai.quick.report">Generate a
                 report</button>
               <button class="btn btn-sm btn-ghost ai-quick-btn"
-                data-prompt="What are the emergency contacts for reporting scams in Malaysia?"
+                data-prompt="Emergency contacts"
                 data-i18n="ai.quick.emergency">Emergency contacts</button>
             </div>
             <form id="ai-chat-form-inline" class="ai-chat-input-row">
